[gd_scene load_steps=6 format=2]

[ext_resource path="res://images/laser.png" type="Texture" id=1]
[ext_resource path="res://scripts/Laser.gd" type="Script" id=2]
[ext_resource path="res://audio/laser.mp3" type="AudioStream" id=3]
[ext_resource path="res://audio/ouch.mp3" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 50.0

[node name="Laser" type="Area2D"]
light_mask = 0
collision_layer = 8
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2, 42 )
scale = Vector2( 0.9, 0.3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, -1 )
shape = SubResource( 1 )

[node name="LaserBullet" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0

[node name="Ouch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Laser_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
